--- a/qof/NEWS
+++ b/qof/NEWS
@@ -1,3 +1,6 @@
+October 2005: Preparing for libqof1 final release and outlining
+    how QOF will change in the future.
+
 May 2005 : Tidying up calls to create a usable distribution 
      for packaging.
 
