--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -1,3 +1,9 @@
+qof (0.6.1-1) unstable; urgency=low
+
+  * New upstream release 
+
+ -- Neil Williams <linux@codehelp.co.uk>  Tue, 20 Dec 2005 21:51:26 +0000
+
 qof (0.6.0-1) unstable; urgency=low
 
   * New upstream release
