--- a/qof/po/ChangeLog
+++ b/qof/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-31  Neil Williams <linux@codehelp.co.uk>
+
+	* en_GB.po : Updated for 0.6.1 release.
+
 2005-08-29  Neil Williams <linux@codehelp.co.uk>
 
 	* po/: First gettext addition for backend configuration.
