--- a/qof/po/en_GB.po
+++ b/qof/po/en_GB.po
@@ -1,29 +1,40 @@
 # English-GB for QOF
 # Copyright (C) 2005 Neil Williams <linux@codehelp.co.uk>
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the qof package.
 # Neil Williams <linx@codehelp.co.uk>, 2005.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: QOF 0.6.0\n"
-"Report-Msgid-Bugs-To: qof-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2005-09-25 18:52+0100\n"
-"PO-Revision-Date: 2005-09-25 18:55+0100\n"
+"Project-Id-Version: QOF 0.6.1\n"
+"Report-Msgid-Bugs-To: http://lists.sourceforge.net/lists/listinfo/qof-devel\n"
+"POT-Creation-Date: 2005-12-31 13:09+0000\n"
+"PO-Revision-Date: 2005-12-31 13:15+0000\n"
 "Last-Translator: Neil Williams <linx@codehelp.co.uk>\n"
 "Language-Team: English (British) <en_gb@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ../backend/file/qsf-backend.c:64
+#: ../backend/file/qsf-backend.c:89
 msgid "Level of compression to use: 0 for none, 9 for highest."
-msgstr "qof-devel@lists.sourceforge.net"
+msgstr "Level of compression to use: 0 for none, 9 for highest."
 
-#: ../backend/file/qsf-backend.c:65
+#: ../backend/file/qsf-backend.c:90
 msgid ""
 "QOF can compress QSF XML files using gzip. Note that compression is not used "
 "when outputting to STDOUT."
 msgstr ""
 "QOF can compress QSF XML files using gzip. Note that compression is not used "
 "when outputting to STDOUT."
+
+#: ../backend/file/qsf-backend.c:98
+msgid "List of QSF map files to use for this session."
+msgstr "List of QSF map files to use for this session."
+
+#: ../backend/file/qsf-backend.c:99
+msgid ""
+"QOF can convert objects within QSF XML files using a map of the changes "
+"required."
+msgstr ""
+"QOF can convert objects within QSF XML files using a map of the changes "
+"required."
