--- a/qof/ChangeLog
+++ b/qof/ChangeLog
@@ -1,3 +1,30 @@
+2006-02-26  Neil Williams <linux@codehelp.co.uk>
+
+    * qof/qof-be-utils.h : Replace macro to restore
+    programme flow.
+	* qof/qofevent.c : 
+	* qof/qofevent.h : Outline method to make application 
+    events easier to use.
+	* qof/Makefile.am :
+	* qof-1.pc.in : Fedora fixes from Toshio Kuratomi 
+	<toshio@tiki-lounge.com>
+
+2006-02-25  Neil Williams <linux@codehelp.co.uk>
+
+    * qof/qof-be-utils.h : 
+    * qof/qofbackend.c : Add function version of
+    QOF_COMMIT_EDIT_PART2
+	* qof/deprecated.c : Define deprecated event functions
+    that call new QofEvents with a NULL event_data argument.
+    * qof/qofbook.c : Use new qof_event arguments.
+	* qof/qofevent.c : Allow events to be generated with an
+    optional event_data argument.
+	* qof/qofevent.h : Doxygen tweaks.
+    * qof/guid.c : Gnucash r13391 - Keep track of exactly how 
+    many bytes have been sent to md5_process_bytes().
+	* qof/qofid.c : Gnucash r13351 - Mark the QofCollection 
+	as dirty when a new QofEntity is added or removed.
+
 2006-02-20  Neil Williams <linux@codehelp.co.uk>
 
 	* qof/gnc-event.c :
